# EveLogLite

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
.teamcity/: pom.xml  settings.kts
.teamcity/MacOS/: Project.kt
.teamcity/Windows/: Project.kt
.teamcity/_Self.kt/: Project.kt
.teamcity/_Self.kt/buildTypes/: CreateUniversalBuilds.kt  PublishToPerforce.kt
clients/python/: __init__.py
clients/qtclient/: qloglitelogger.cpp  qloglitelogger.h
cmake/: CcpBuildConfigurations.cmake  CcpDocsGenerator.cmake  CcpMonolithVendorConfig.cmake  CcpPackageConfigHelpers.cmake  CcpTargetConfigurations.cmake  PyTestDiscoverTests.cmake  README.md  templatePackageConfig.cmake.in
cmake/internal/: PyTestDiscoverTestsImpl.cmake
cmake/templates/: LogLite_resource.rc
cmake/triplets/: arm64-osx-debug.cmake  arm64-osx-internal.cmake  arm64-osx-release.cmake  arm64-osx-trinitydev.cmake  x64-osx-debug.cmake  x64-osx-internal.cmake  x64-osx-release.cmake  x64-osx-trinitydev.cmake  x64-windows-145-debug.cmake  x64-windows-145-internal.cmake  x64-windows-145-release.cmake  x64-windows-145-trinitydev.cmake  x64-windows-debug.cmake  x64-windows-internal.cmake  x64-windows-release.cmake  x64-windows-trinitydev.cmake
include/: filtercondition.h  filterconditions.h  logfilter.h  logmap.h  logmodel.h  logstatistics.h  logview.h  mainwindow.h  wintaskbarbutton.h
src/: CMakeLists.txt  LogLite.pro  LogLite_resource.rc  abstractlogmodel.cpp  abstractlogmodel.h  filter.ui  filtercondition.cpp  filterconditions.cpp  filterdialog.cpp  filterdialog.h  filterhighlight.cpp  filterhighlight.h  filterhighlight.ui  filters.cpp  fixedheader.cpp  fixedheader.h  highlightdialog.cpp  highlightdialog.h  highlights.ui  logfilter.cpp  logmap.cpp  logmodel.cpp  logmodel.h  logmonitorfilemodel.cpp  logmonitorfilemodel.h  logstatistics.cpp  logstatistics.ui  logview.cpp  logview.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  overlaylayout.cpp  overlaylayout.h  resources.qrc  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  wintaskbarbutton.cpp
src/resources/icon/: buildOsxIcon.sh
